--- a/style.css
+++ b/style.css
@@ -137,12 +137,35 @@ p {
 }
 
 aside.toc {
-  position: fixed;
+  /* position: fixed; */
   display: none;
 }
 
 aside.active-toc {
   display: block;
+}
+
+.toc a {
+  display: block;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 0.25vh;
+  text-decoration: none;
+  color: #5E5E5E;
+}
+
+.toc > h2, .toc > h3{
+  font-size: large;
+  background-color: unset;
+  margin: 0;
+  padding: 0;
+}
+
+.toc > h2 {
+  margin-left: 1vw;
+}
+.toc > h3 {
+  margin-left: 2vw;
 }
 
 aside.toc > ul {
