--- a/style.css
+++ b/style.css
@@ -192,7 +192,9 @@ aside#calendar {
   background-color: #F8F8F8;
 }
 
-.placeholder {
-  height: 500px;
+.temp {
   background-color: #f2951d;
+  margin: 1vh 1vw;
+  padding: 1vh 1vw;
+  text-align: center;
 }
