--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ section.intro {
 
 #toc-container {
   border: 1px solid black;
-  margin: 0 1vw;
+  margin: 0 1vw 0 2.5vw;
   width: 30%;
   float: left;
 }
@@ -154,15 +154,16 @@ section.article-body {}
 
 section.article-body > h2, section.article-body > h3, section.article-body > h4 {
   background-color: #eee;
-  padding: 0.5vh 0 0.5vh 0.5vw;
+  padding: 1.5vh 1.5vw;
   margin: 0;
   margin-bottom: 1%;
 }
 
 p {
-  padding: 0 0.5vw;
+  padding: 0 2.5vw;
   margin: 0;
   margin-bottom: 1vh;
+  font-size: 20px;
 }
 
 .code-snippet {
