--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ li.nav-item a {
   margin: 0;
   margin-bottom: 0.5vh;
   text-decoration: none;
+  font-size: x-large;
   color: #000;
 }
 
@@ -195,8 +196,7 @@ code {
 }
 
 figure {
-  border: 1px solid black;
-  padding: 2vh 1vw;
+  padding: 2vh s1vw;
   margin: 2vh 1vw;
   text-align: center;
 }
@@ -204,6 +204,7 @@ figure {
 figcaption {
   margin: 1vh auto;
   text-align: center;
+  width: 60%;
   font-style: italic;
 }
 
