--- a/style.css
+++ b/style.css
@@ -160,6 +160,11 @@ section.article-body > h2, section.article-body > h3, section.article-body > h4 
   margin-bottom: 1%;
 }
 
+section.article-body > h3, section.article-body > h4  {
+  padding-left: 0.5vw;
+  margin: 0 2.5vw;
+}
+
 p {
   padding: 0 2.5vw;
   margin: 0;
@@ -173,17 +178,16 @@ p {
   border-left: 3px solid #f2951d;
   color: #666;
   page-break-inside: avoid;
-  font: 14px/16px "Courier New";
+  font: 18px/20px "Courier New";
   text-align: left;
   line-height: 1.0;
-  margin-bottom: 1.6em;
   max-width: 100%;
   padding: 1.5vh 0.5vw;
   display: block;
   display: block;
   word-wrap: break-word;
   display: block;
-  margin-left: 2vw;
+  margin: 1.5vh 2.5vw;
   overflow: auto;
   overflow-x: auto;
   white-space: pre-wrap;
