--- a/style.css
+++ b/style.css
@@ -222,7 +222,7 @@ a {
 }
 
 blockquote.q {
-  border-left: 3px solid var(--black);
+  border-left: 5px solid var(--grey);
   padding: 1.5vh 1.5vw;
   margin: 1.5vh 2.5vw;
 }
