--- a/style.css
+++ b/style.css
@@ -176,6 +176,12 @@ a {
   text-decoration: none;
 }
 
+strong {
+  font-weight: bold;
+  font-size: 22px;
+  text-decoration: underline;
+}
+
 .box {
   padding: 1.5vh 1.5vw;
   margin: 1.5vh 2.5vw;
