--- a/style.css
+++ b/style.css
@@ -221,6 +221,26 @@ blockquote.q {
   margin: 1.5vh 2.5vw;
 }
 
+figure.blockquote {
+  margin: 0.5vh 10vw;
+  padding: 1vh 0;
+  background-color: var(--lgrey);
+  border-left: 5px solid var(--grey);
+
+}
+
+figure.blockquote blockquote {
+  font-style: italic;
+  color: var(--grey);
+  margin: 3vh 0;
+}
+
+figure.blockquote figcaption {
+  font-style: normal;
+  text-align: right;
+  margin: 0 auto;
+}
+
 code {
   background-color: var(--lgrey);
   color: var(--red);
