--- a/style.css
+++ b/style.css
@@ -171,6 +171,10 @@ section.sub-section > h3, section.sub-section > h4  {
 section.sub-section > p {
 }
 
+section.sub-section li {
+  margin: 1vh 0;
+}
+
 a {
   color: var(--blue);
   text-decoration: none;
