--- a/style.css
+++ b/style.css
@@ -158,14 +158,20 @@ section.sub-section {
   overflow: hidden;
 }
 
-article.wiki-entry > h2, article.wiki-entry h3, article.wiki-entry h4 {
+article.wiki-entry > h2, article.wiki-entry h3 {
   background-color: var(--mgrey);
   padding: 1.5vh 1.5vw;
   margin: 0;
 }
 
-section.sub-section > h3, section.sub-section > h4  {
+section.sub-section > h3 {
   padding: 0.5vh 0.5vw;
+}
+
+section.sub-section > h4 {
+  padding: 0;
+  margin: 0;
+  border-bottom: 1px solid var(--black)
 }
 
 section.sub-section > p {
