--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ section.sub-section > h3 {
 
 section.sub-section > h4 {
   padding: 0;
-  margin: 0;
+  margin: 0 1vw;
   border-bottom: 1px solid var(--black)
 }
 
