--- a/style.css
+++ b/style.css
@@ -169,8 +169,8 @@ section.sub-section > h3 {
 }
 
 section.sub-section > h4 {
-  padding: 0;
-  margin: 0 1vw;
+  padding: 0 0 0 0.5vw;
+  margin: 0;
   border-bottom: 1px solid var(--black)
 }
 
