style.css fixed resource path error

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
   margin: 0 auto;
   margin-bottom: 10vh;
 
-  background-image: url(rsc/seigaiha.png);
+  background-image: url(rsc/site/seigaiha.png);
   background-repeat: repeat;
 
   font-family: "Fira Sans";
