reorganized styling into separate files imported via style.css

--- a/style.css
+++ b/style.css
@@ -1,18 +1,8 @@
-:root{
-  --orange: #f2951d;
-  --black:  #282828;
-  --grey:   #5E5E5E;
-  --lgrey:  #F4F4F4;
-  --mgrey:  #DDDDDD;
-  --dgrey:  #666666;
-  --blue:   #4D88FF;
-  --red:    #FF4D4D;
-  --pink:   #FFEAE6;
-  --white:  #F8F8F8;
-  --bwhite:  #FFFFFF;
-  --yellow: #FFFF00;
-  --purple: #631296;
-}
+@import "style/colorscheme.css";
+@import "style/banner.css";
+@import "style/flex.css";
+@import "style/navigation.css";
+@import "style/content.css";
 
 body {
   width: 80vw;
@@ -28,322 +18,12 @@ body {
   font-size: 22px;
 }
 
-/*********************
-*
-* BANNER
-*
-********************/
-
-header {
-  width: 66.6%;
-  background-color: var(--black);
-  margin: 0 auto;
-  margin-bottom: 1vh;
-  margin-top: 1vh;
-}
-
-pre#banner {
-  text-align: center;
-  padding: 2vh 0;
-  background-color: var(--black);
-  color: var(--white);
-  line-height: 25px;
-}
-
-/*********************
-*
-* MAIN FLEX CONTAINER
-*
-********************/
-
-.flex-container {
-  display: flex;
-  margin: 1vh 0;
-}
-
-.flex-item-outer {
-  flex: 1;
-}
-
-.flex-item-main {
-  flex: 4;
-}
-
-h1.column-header {
-  background-color: var(--black);
-  color: var(--white);
-  padding: 1vh 0;
-  margin: 0;
-  margin-bottom: 1vh;
-  text-align: center;
-}
-
-/*********************
- *
- * NAVIGATION
- *
- ********************/
-
-.navbar-container {
-  padding-right: 0.5vw;
-}
-
-nav#navbar {
-}
-
-#navbar > ul#nav-items {
-  list-style-type: none;
-  margin: 1vh 0;
-  padding: 0;
-}
-
-li.nav-item a {
-  display: block;
-  background-color: var(--orange);
-  padding: 1vh 0 1vh 0.5vw;
-  margin: 0;
-  margin-bottom: 0.5vh;
-  text-decoration: none;
-  font-size: x-large;
-  color: var(--black);
-}
-
-li.nav-item a:hover {
-  background-color: var(--black);
-  color: var(--white);
-}
-
-/*********************
- *
- * MAIN WIKI ENTRY
- *
- ********************/
-
-.wiki-container {}
-
-main#wiki-column {
-  background-color: var(--white);
-}
-
-/* TABLE OF CONTENTS */
-
-#toc-container {
-  border: 1px solid var(--black);
-  margin: 0 1vw 0 0;
-  width: 30%;
-  float: left;
-  line-height: 20px;
-}
-
-h1.toc-header {
-  margin-bottom: 0;
-}
-
-ul.toc {
-  list-style-type: decimal;
-  margin: 1vh auto;
-  color: var(--grey);
-}
-
-.toc a {
-  display: block;
-  padding: 0;
-  margin: 0;
-  margin-bottom: 0.25vh;
-  text-decoration: none;
-  color: var(--grey);
-}
-
-/* ARTICLE BODY */
-
-section.sub-section {
-  margin: 1.5vh 2.5vw;
-  overflow: hidden;
-}
-
-article.wiki-entry > h2, article.wiki-entry h3 {
-  background-color: var(--mgrey);
-  padding: 1.5vh 1.5vw;
-  margin: 0;
-}
-
-section.sub-section > h3 {
-  padding: 0.5vh 0.5vw;
-}
-
-section.sub-section > h4 {
-  padding: 0 0 0 0.5vw;
-  margin: 0;
-  border-bottom: 1px solid var(--black)
-}
-
-section.sub-section > p {
-}
-
-section.sub-section li {
-  margin: 1vh 0;
-}
-
-a {
-  color: var(--blue);
-  text-decoration: none;
-}
-
-strong {
-  font-weight: bold;
-  font-size: 22px;
-  text-decoration: underline;
-}
-
-.box {
-  padding: 1.5vh 1.5vw;
-  margin: 1.5vh 2.5vw;
-}
-
-.attention {
-  background: var(--pink);
-  /* border-left: 3px solid var(--red); */
-}
-
-.snippet {
-  background: var(--lgrey);
-  border: 1px solid var(--mgrey);
-  border-left: 3px solid var(--orange);
-  color: var(--dgrey);
-  page-break-inside: avoid;
-  text-align: left;
-  line-height: 1.0;
-  max-width: 100%;
-  display: block;
-  word-wrap: break-word;
-  overflow: auto;
-  overflow-x: auto;
-  white-space: pre-wrap;
-}
-
-.code {
-  font-family: "Courier New";
-}
-
-.formula {
-  background: var(--bwhite);
-  border-left: 3px solid var(--blue);
-  text-align: center;
-  white-space: pre;
-}
-
-.definition {
-  border-left: 3px solid var(--red);
-}
-
-.math {
-  font-style: italic;
-  font-family: "Garamond";
-}
-
-.inline{
-  display: inline;
-  color: var(--red);
-}
-
-.keyword {
-  display: inline;
-  color: var(--purple);
-  font-weight: bold;
-}
-
-figure.formula > img {
-  margin: 0 auto;
-}
-
-p.addme {
-  color: var(--yellow);
-  background-color: var(--black);
-  font-style: italic;
-}
-
-blockquote.q {
-  border-left: 5px solid var(--grey);
-  padding: 1.5vh 1.5vw;
-  margin: 1.5vh 2.5vw;
-}
-
-figure.blockquote {
-  margin: 0.5vh 10vw;
-  padding: 1vh 0;
-  background-color: var(--lgrey);
-  border-left: 5px solid var(--grey);
-
-}
-
-figure.blockquote blockquote {
-  font-style: italic;
-  color: var(--grey);
-  margin: 3vh 0;
-}
-
-figure.blockquote figcaption {
-  font-style: normal;
-  text-align: right;
-  margin: 0 auto;
-}
-
-figure {
-  /* padding: 2vh 1vw; */
-  margin: 2vh 1vw;
-  text-align: center;
-}
-
-figcaption {
-  margin: 1vh auto;
-  text-align: center;
-  width: 60%;
-  font-style: italic;
-}
-
-img {
-  max-width: 100%;
-  margin: 0 auto;
-}
-
-table {
-  margin: 1.5vh 2.5vw;
-  border: 1px solid var(--mgrey);
-  table-layout: fixed;
-  border-collapse: collapse;
-}
-
-td, th {
-  width: 50%;
-  padding: 0.5vh 1vw;
-  border: 1px solid var(--mgrey);
-}
-
-/*********************
- *
- * CALENDAR
- *
- ********************/
-
 .calendar-container {
   padding-left: 0.5vw;
 }
 
 aside#calendar {
   background-color: var(--white);
-}
-
-/*********************
- *
- * OTHER
- *
- ********************/
-
-.temp {
-  background-color: var(--orange);
-  margin: 1vh 1vw;
-  padding: 1vh 1vw;
-  text-align: center;
 }
 
 div#upArrow {
@@ -356,4 +36,11 @@ div#upArrow {
 div#upArrow > a {
   color: var(--white);
   text-decoration: none;
+}
+
+.temp {
+  background-color: var(--orange);
+  margin: 1vh 1vw;
+  padding: 1vh 1vw;
+  text-align: center;
 }
