refactored inline math element to a single css class

--- a/style/content.css
+++ b/style/content.css
@@ -131,6 +131,12 @@ strong {
   color: var(--red);
 }
 
+span.inline-math {
+  display: inline;
+  font-style: italic;
+  font-family: "Garamond";
+}
+
 .keyword {
   display: inline;
   color: var(--purple);
